--- a/currency-api/src/main/resources/application.properties
+++ b/currency-api/src/main/resources/application.properties
@@ -6,3 +6,5 @@ eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
 
 # enable all actuator URLS
 management.endpoints.web.exposure.include=*
+
+cach.maps.currency-api=curruency
