ajouter management-center de hazelcast pour le monitoring

--- a/currency-api/src/main/resources/application.properties
+++ b/currency-api/src/main/resources/application.properties
@@ -8,3 +8,4 @@ eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
 management.endpoints.web.exposure.include=*
 
 cach.maps.currency-api=curruency
+cach.managementCenter.url=http://localhost:8080/hazelcast-mancenter
